--- a/environment.yml
+++ b/environment.yml
@@ -1,18 +1,174 @@
 name: sdss-classifier
 channels:
-  - conda-forge
   - defaults
-
+  - conda-forge
 dependencies:
-  - ipython=8.8.0  # a powerful Python shell
-  - ipywidgets=8.0.2  # optionally used only in chapter 12 for tqdm in Jupyter
-  - jupyterlab=3.5.2  # to edit and run Jupyter notebooks
-  - matplotlib=3.6  # beautiful plots. See tutorial tools_matplotlib.ipynb
-  - numpy=1.24  # Powerful n-dimensional arrays and numerical computing tools
-  - pandas=1.5.2  # data analysis and manipulation tool
-  - pillow=9.4  # image manipulation library, (used by matplotlib.image.imread)
-  - pip  # Python's package-management system
-  - python=3.10.8  # your beloved programming language! :)
-  - requests=2.28  # used only in chapter 19 for REST API queries
-  - scikit-learn=1.2.0  # machine learning library
-  - scipy=1.10  # scientific/technical computing library
+  - anyio=3.6.2=pyhd8ed1ab_0
+  - appdirs=1.4.4=pyh9f0ad1d_0
+  - appnope=0.1.3=pyhd8ed1ab_0
+  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py310h90acd4f_3
+  - astropy=5.1=py310h4e76f89_0
+  - asttokens=2.2.1=pyhd8ed1ab_0
+  - attrs=22.2.0=pyh71513ae_0
+  - babel=2.11.0=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.1=pyhd3eb1b0_0
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - beautifulsoup4=4.11.1=pyha770c72_0
+  - bleach=5.0.1=pyhd8ed1ab_0
+  - brotli=1.0.9=hb7f2c08_8
+  - brotli-bin=1.0.9=hb7f2c08_8
+  - brotlipy=0.7.0=py310h90acd4f_1005
+  - bzip2=1.0.8=h0d85af4_4
+  - ca-certificates=2022.12.7=h033912b_0
+  - certifi=2022.12.7=pyhd8ed1ab_0
+  - cffi=1.15.1=py310ha78151a_3
+  - charset-normalizer=2.1.1=pyhd8ed1ab_0
+  - comm=0.1.2=pyhd8ed1ab_0
+  - contourpy=1.0.7=py310ha23aa8a_0
+  - cryptography=39.0.0=py310hdd0c95c_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - debugpy=1.6.5=py310h7a76584_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - executing=1.2.0=pyhd8ed1ab_0
+  - flit-core=3.8.0=pyhd8ed1ab_0
+  - fonttools=4.38.0=py310h90acd4f_1
+  - freetype=2.12.1=h3f81eb7_1
+  - idna=3.4=pyhd8ed1ab_0
+  - importlib-metadata=6.0.0=pyha770c72_0
+  - importlib_resources=5.10.2=pyhd8ed1ab_0
+  - ipykernel=6.20.1=pyh736e0ef_0
+  - ipython=8.8.0=pyhd1c38e8_0
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=8.0.4=pyhd8ed1ab_0
+  - jedi=0.18.2=pyhd8ed1ab_0
+  - jinja2=3.1.2=pyhd8ed1ab_1
+  - joblib=1.2.0=pyhd8ed1ab_0
+  - jpeg=9e=hac89ed1_2
+  - json5=0.9.6=pyhd3eb1b0_0
+  - jsonschema=4.17.3=pyhd8ed1ab_0
+  - jupyter_client=7.4.9=pyhd8ed1ab_0
+  - jupyter_core=5.1.3=py310h2ec42d9_0
+  - jupyter_events=0.6.3=pyhd8ed1ab_0
+  - jupyter_server=2.1.0=pyhd8ed1ab_0
+  - jupyter_server_terminals=0.4.4=pyhd8ed1ab_1
+  - jupyterlab=3.5.2=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
+  - jupyterlab_server=2.19.0=pyhd8ed1ab_0
+  - jupyterlab_widgets=3.0.5=pyhd8ed1ab_0
+  - kiwisolver=1.4.4=py310ha23aa8a_1
+  - lcms2=2.14=h29502cd_1
+  - lerc=4.0.0=hb486fe8_0
+  - libblas=3.9.0=16_osx64_openblas
+  - libbrotlicommon=1.0.9=hb7f2c08_8
+  - libbrotlidec=1.0.9=hb7f2c08_8
+  - libbrotlienc=1.0.9=hb7f2c08_8
+  - libcblas=3.9.0=16_osx64_openblas
+  - libcxx=14.0.6=hccf4f1f_0
+  - libdeflate=1.17=hac1461d_0
+  - libffi=3.4.2=hecd8cb5_6
+  - libgfortran=5.0.0=11_3_0_hecd8cb5_28
+  - libgfortran5=11.3.0=h9dfd629_28
+  - libjpeg-turbo=2.1.4=hb7f2c08_0
+  - liblapack=3.9.0=16_osx64_openblas
+  - libopenblas=0.3.21=openmp_h429af6e_3
+  - libpng=1.6.39=ha978bb4_0
+  - libsodium=1.0.18=hbcb3906_1
+  - libsqlite=3.40.0=ha978bb4_0
+  - libtiff=4.5.0=hee9004a_2
+  - libwebp-base=1.2.4=h775f41a_0
+  - libxcb=1.13=h0d85af4_1004
+  - libzlib=1.2.13=hfd90126_4
+  - llvm-openmp=15.0.7=h61d9ccf_0
+  - markupsafe=2.1.1=py310h90acd4f_2
+  - matplotlib=3.6.2=py310h2ec42d9_0
+  - matplotlib-base=3.6.2=py310he725631_0
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
+  - mistune=2.0.4=pyhd8ed1ab_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - nbclassic=0.4.8=pyhd8ed1ab_0
+  - nbclient=0.7.2=pyhd8ed1ab_0
+  - nbconvert=7.2.7=pyhd8ed1ab_0
+  - nbconvert-core=7.2.7=pyhd8ed1ab_0
+  - nbconvert-pandoc=7.2.7=pyhd8ed1ab_0
+  - nbformat=5.7.3=pyhd8ed1ab_0
+  - ncurses=6.3=hca72f7f_3
+  - nest-asyncio=1.5.6=pyhd8ed1ab_0
+  - notebook=6.5.2=pyha770c72_1
+  - notebook-shim=0.2.2=pyhd8ed1ab_0
+  - numpy=1.24.1=py310h1b7c290_0
+  - openjpeg=2.5.0=h13ac156_2
+  - openssl=3.0.7=hfd90126_1
+  - packaging=23.0=pyhd8ed1ab_0
+  - pandas=1.5.2=py310hecf8f37_2
+  - pandoc=2.19.2=h694c41f_1
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=py_1003
+  - pillow=9.4.0=py310hab5364c_0
+  - pip=22.3.1=pyhd8ed1ab_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
+  - platformdirs=2.6.2=pyhd8ed1ab_0
+  - pooch=1.6.0=pyhd8ed1ab_0
+  - prometheus_client=0.15.0=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.36=pyha770c72_0
+  - psutil=5.9.4=py310h90acd4f_0
+  - pthread-stubs=0.4=hc929b4f_1001
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pyerfa=2.0.0=py310hca72f7f_0
+  - pygments=2.14.0=pyhd8ed1ab_0
+  - pyopenssl=23.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pyrsistent=0.19.3=py310h90acd4f_0
+  - pysocks=1.7.1=pyha2e5f31_6
+  - python=3.10.8=he7542f4_0_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-fastjsonschema=2.16.2=pyhd8ed1ab_0
+  - python-json-logger=2.0.4=pyhd8ed1ab_0
+  - python_abi=3.10=3_cp310
+  - pytz=2022.7=pyhd8ed1ab_0
+  - pyyaml=6.0=py310h90acd4f_5
+  - pyzmq=25.0.0=py310hf615a82_0
+  - readline=8.2=hca72f7f_0
+  - requests=2.28.1=pyhd8ed1ab_1
+  - rfc3339-validator=0.1.4=pyhd8ed1ab_0
+  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
+  - scikit-learn=1.2.0=py310hcebe997_0
+  - scipy=1.10.0=py310h240c617_0
+  - send2trash=1.8.0=pyhd3eb1b0_1
+  - setuptools=65.6.3=pyhd8ed1ab_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - sniffio=1.3.0=pyhd8ed1ab_0
+  - soupsieve=2.3.2.post1=pyhd8ed1ab_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - terminado=0.17.1=pyhd1c38e8_0
+  - threadpoolctl=3.1.0=pyh8a188c0_0
+  - tinycss2=1.2.1=pyhd8ed1ab_0
+  - tk=8.6.12=h5dbffcc_0
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - tornado=6.2=py310h90acd4f_1
+  - traitlets=5.8.1=pyhd8ed1ab_0
+  - typing-extensions=4.4.0=hd8ed1ab_0
+  - typing_extensions=4.4.0=pyha770c72_0
+  - tzdata=2022g=h191b570_0
+  - unicodedata2=15.0.0=py310h90acd4f_0
+  - urllib3=1.26.14=pyhd8ed1ab_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webencodings=0.5.1=py_1
+  - websocket-client=1.4.2=pyhd8ed1ab_0
+  - wheel=0.38.4=pyhd8ed1ab_0
+  - widgetsnbextension=4.0.5=pyhd8ed1ab_0
+  - xorg-libxau=1.0.9=h35c211d_0
+  - xorg-libxdmcp=1.1.3=h35c211d_0
+  - xz=5.2.8=h6c40b1e_0
+  - yaml=0.2.5=h0d85af4_2
+  - zeromq=4.3.4=he49afe7_1
+  - zipp=3.11.0=pyhd8ed1ab_0
+  - zstd=1.5.2=hfa58983_4
+prefix: /Users/ajithj/mambaforge/envs/sdss-classifier
